# CoOp-poc

./: .dockerignore  .gitignore  ALEMBIC_MIGRATIONS.md  DOCKERFILE.md  Makefile  POETRY_SETUP.md  README.md  alembic.ini  azure-pipelines.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_26_2121-8f8ecb998390_initial_migration_create_users_table.py
co_optimal/: .env.sample  fastapi_application.py
co_optimal/config/: __init__.py
co_optimal/config/v1/: __init__.py  api_config.py  authentication_config.py  database_config.py  llm_config.py  logging.conf
co_optimal/core/: __init__.py  fastapi_blueprints.py
co_optimal/models/: __init__.py  base.py  user.py
co_optimal/utils/v1/: connections.py  errors.py
dockerfiles/: Dockerfile.co_optimal  docker-compose.co_optimal.yml
